# link_finder

./: .gitignore  README.md  main.py  pyproject.toml
scraper_js/: __init__.py  scrapy.cfg
scraper_js/goosebumps/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
scraper_js/goosebumps/spiders/: __init__.py  larvae.py
