[tool.poetry]
name = "link_finder"
version = "0.1.0"
description = "Simple link finder"
authors = ["Jovial <discard@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.2"
playwright = "^1.24.0"
scrapy-playwright = "^0.0.18"
nest-asyncio = "^1.5.5"
loguru = "^0.6.0"
Faker = "^13.15.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
